<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
        Relative Layouts are controlled mostly by a combination of three attributes:
        1. android:layout_ + modifier |above|toEndOf|toStartOf|centerHorizontal|centerVertical|centerInParent
        2. android:layout_align + modifier end|start|bottom|top|baseline etc
        3. android:margin + modifier top|bottom|start|end to control spacing among elements
    -->

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/practice_title"
        android:textSize="18sp"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/second_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_textView"
        android:text="@string/practice_second_title"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>

    <TextView
        android:id="@+id/third_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_textView"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/second_textView"
        android:text="@string/practice_third_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fourth_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/third_textView"
        android:layout_alignStart="@id/second_textView"
        android:layout_alignEnd="@id/third_textView"
        android:textAlignment="center"
        android:text="@string/practice_fourth_title"
        android:textSize="16sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/practice_button_text"/>

</RelativeLayout>