<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intro_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:textSize="32sp"
        android:text="@string/hi"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/enter_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:text="@string/prompt_name"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:singleLine="true"/>

    <Button
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="64dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:text="@string/button_go"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"/>

</LinearLayout>