<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_30"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintGuide_percent="0.30"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/intro_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/hi"
        app:layout_constraintTop_toBottomOf="@id/guideline_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/enter_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:text="@string/prompt_name"
        app:layout_constraintTop_toBottomOf="@id/intro_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_name_text_view"/>

    <Button
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="64dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:text="@string/button_go"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>